# Scriba_robot

./: Part List.xlsx  README.md
CAD/: 2.54_pin_female_headers.SLDPRT  2.54_pin_male_headers.SLDPRT  Ball_Conveyor_Roller_CY-8H.SLDPRT  EMAX_ES09MD_Servo.SLDPRT  HP_51604A_printhead.SLDPRT  ISO - 4032 - M2 - W - N.sldprt  ISO - 4032 - M3 - D - N.sldprt  ISO - 4032 - M3 - W - N.sldprt  ISO - 4032 - M6 - D - N.sldprt  ISO - 4035 - M2 - N.sldprt  ISO - 4035 - M3 - N.sldprt  ISO - 4035 - M4 - N.sldprt  ISO - 4035 - M6 - N.sldprt  ISO - Spur gear 0.5M 120T 20PA 3FW ---S120A75H50L8.0N.sldprt  ISO - Spur gear 0.5M 16T 20PA 3.3FW ---S16A75H50L3.0N.sldprt  ISO - Spur gear 0.5M 300T 20PA 3.3FW ---S300A75H50L3.0N.sldprt  ISO - Spur gear 0.7M 133T 20PA 3.3FW ---S133A75H50L3.0N.sldprt  ISO - Spur gear 0.7M 300T 20PA 3.3FW ---S300A75H50L3.0N.sldprt  ISO - Spur gear 0.7M 30T 20PA 3.3FW ---S30A75H50L3.0N.sldprt  ISO - Spur gear 0.7M 35T 20PA 3.3FW ---S35A75H50L3.0N.sldprt  ISO - Spur gear 1.125M 300T 20PA 3.3FW ---S300A75H50L3.0N.sldprt  ISO - Spur gear 1.25M 280T 20PA 3.3FW ---S280A75H50L3.0N.sldprt  ISO - Spur gear 1M 290T 20PA 3.3FW ---S290A75H50L3.0N.sldprt  ISO - Spur gear 1M 300T 20PA 3.3FW ---S300A75H50L3.0N.sldprt  ISO 10669-1.9-N.sldprt  ISO 10669-2.5-N.sldprt  ISO 10669-3-N.sldprt  ISO 10673-3.2-L.sldprt  ISO 10673-3.2-S.sldprt  ISO 1207 - M2 x 16 - 16N.sldprt  ISO 1207 - M2 x 20 - 20N.sldprt  ISO 15 RBB - 024 - 8,SI,NC,8_68.sldprt  ISO 1580 - M2 x 16 - 16N.sldprt  ISO 1580 - M2 x 20 - 20N.sldprt  ISO 1580 - M3 x 10 - 10N.sldprt  ISO 1580 - M3 x 12 - 12N.sldprt  ISO 1580 - M3 x 16 - 16N.sldprt  ISO 1580 - M3 x 20 - 20N.sldprt  ISO 2009 - M2 x 10 - 10N.sldprt  ISO 2009 - M2 x 3 - 3N.sldprt  (+80 more)
CAD/arduino_nano/: User Library-arduino_nano.sldasm  User Library-arduino_nano_102 RESISTOR PACK.sldprt  User Library-arduino_nano_15pin_header__.sldprt  User Library-arduino_nano_16mhz crystal - measured.sldprt  User Library-arduino_nano_189 RESISTOR PACK.sldprt  User Library-arduino_nano_2pin_header__02.sldprt  User Library-arduino_nano_MINI USB CONTACT.sldprt  User Library-arduino_nano_MINIUSBCORE.sldprt  User Library-arduino_nano_MINIUSBSHELL.sldprt  User Library-arduino_nano_NANO DIODE.sldprt  User Library-arduino_nano_atmega328.sldprt  User Library-arduino_nano_cap106C.sldprt  User Library-arduino_nano_ftdi FT232rl.sldprt  User Library-arduino_nano_led.sldprt  User Library-arduino_nano_nano - reg.sldprt  User Library-arduino_nano_nano-board.sldprt  User Library-arduino_nano_reset core.sldprt  User Library-arduino_nano_reset shell.sldprt  User Library-arduino_nano_smt_resistor222.sldprt
CAD/calibration_tool/: calibration_rig.SLDASM  calibration_rig.SLDDRW  front.SLDPRT  (+9 more)
Code/ROS/scriba/: CMakeLists.txt  package.xml
Code/ROS/scriba/include/angle_kalman_filter/: angle_kalman_filter.h
Code/ROS/scriba/launch/: scriba_bringup.launch  scriba_odom.launch  scriba_rviz_remote.launch
Code/ROS/scriba/scripts/: front_wheel_calibration.py
Code/ROS/scriba/src/: angle_kalman_filter.cpp  scriba_base_controller.cpp  scriba_odometry_broadcaster.cpp
Code/ROS/scriba_description/: CMakeLists.txt  package.xml  urdf_odom.rviz
Code/ROS/scriba_description/launch/: scriba_rviz.launch
Code/ROS/scriba_description/meshes/: camera.STL  camera_support.STL  carter.STL  front_wheel_support.STL  main_body.STL  motor.STL  slider.STL  slider_base.STL  slider_camera.STL  slider_camera_support.STL  wheel.STL
Code/ROS/scriba_description/urdf/: scriba.urdf
Code/ROS/scriba_msgs/: CMakeLists.txt  package.xml
Code/ROS/scriba_msgs/msg/: data_odom.msg  mot_cmd.msg
Code/ROS/scriba_msgs/srv/: front_wheel_calibration.srv
(+251 files in other folders)
